fix some spacing problem for each section

--- a/project/personal-website/styles/_contact.scss
+++ b/project/personal-website/styles/_contact.scss
@@ -3,8 +3,7 @@
   @include page-setup;
   box-shadow: 5px 5px 15px 3px #ccc;
   overflow: hidden;
-  border-top-left-radius: $radius;
-  border-top-right-radius: $radius;
+  border-radius: $radius;
 }
 .page__content{
   text-align: left;
@@ -48,7 +47,7 @@
     border-bottom:solid 1px #e0e0e0;
     margin-bottom: 25px;
     position:relative;
-    &::after {
+    .underline__focus {
       position: absolute;
       content: "";
       transition-property: left,right;
@@ -56,14 +55,15 @@
       left: 50%;
       right: 50%;
       bottom: -1px;
-      border-bottom: solid 2px black;
+      border-bottom: solid 2px $ThemeBackground;
     }
     input{
       height:41px;
       width:100%;
       border:none;
-      
+      font-size: 20px;
     }
+    
 
 
   }
@@ -75,6 +75,7 @@ textarea {
     resize: none;
     flex:1;
     border:none;
+    font-size: 20px;
   }
 
 }
@@ -85,7 +86,7 @@ textarea {
   width: 40px;
 }
 .message__icon-holder {
-  padding-top: 10px;
+  padding-top: 15px;
   background-color: #fafafa;
   width: 40px;
 }
@@ -93,8 +94,7 @@ textarea {
 .icon-holder{
   display:flex;
   justify-content: center;
-  align-items: center;
-  
+  align-items: center; 
 }
 .message__icon-holder{
   align-items: flex-start;
@@ -132,4 +132,7 @@ textarea {
   transition-property: transform, font-size;
   transition-duration: 0.2s;
   cursor: text;
+}
+.info__message{
+  top:9px;
 }
